--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 	<groupId>com.example</groupId>
 	<artifactId>task-project</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>pom</packaging>
 	<name>task-project</name>
 
 	<modules>
