--- a/rest-module/src/main/resources/application.properties
+++ b/rest-module/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.show_sql=true
 
 spring.mvc.hiddenmethod.filter.enabled=true
+
+soap.uri=http://localhost:8081/service
