--- a/soap-module/pom.xml
+++ b/soap-module/pom.xml
@@ -43,6 +43,12 @@
             <version>4.0.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>2.15.3</version>
+        </dependency>
+
     </dependencies>
 
     <build>
