--- a/rest-module/src/main/resources/application.properties
+++ b/rest-module/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.mvc.hiddenmethod.filter.enabled=true
 
 soap.uri=http://localhost:8081/service
+
+logging.level.com.example=INFO
+logging.pattern.file= "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+logging.file.name=logs/rest-log/rest-app.log
+logging.logback.rollingpolicy.max-file-size=1MB
