--- a/soap-module/src/main/resources/application.properties
+++ b/soap-module/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 server.port=8081
+
+logging.level.com.example=INFO
+logging.pattern.file= "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+logging.file.name=logs/soap-log/soap-app.log
+logging.logback.rollingpolicy.max-file-size=1MB
