--- a/soap-module/pom.xml
+++ b/soap-module/pom.xml
@@ -68,6 +68,8 @@
                     <sources>
                         <source>${project.basedir}/src/main/resources/converter.xsd</source>
                     </sources>
+                    <outputDirectory>src/main/java/com/example/wsdl</outputDirectory>
+                    <clearOutputDir>false</clearOutputDir>
                 </configuration>
             </plugin>
         </plugins>
