changed generated output directory in soap-module

--- a/soap-module/pom.xml
+++ b/soap-module/pom.xml
@@ -68,8 +68,9 @@
                     <sources>
                         <source>${project.basedir}/src/main/resources/converter.xsd</source>
                     </sources>
-                    <outputDirectory>src/main/java/com/example/wsdl</outputDirectory>
+                    <outputDirectory>src/main/java/</outputDirectory>
                     <clearOutputDir>false</clearOutputDir>
+                    <packageName>com.example.wsdl</packageName>
                 </configuration>
             </plugin>
         </plugins>
